@@ -5,6 +5,7 @@ WP Movie Ratings changelog:
 - lots of CSS fixes to make the plugin compatible with more Wordpress themes.
 - plugin options now feature additional descriptions explaining what each option means.
 - basic statistics included in page mode.
+- added error message when rating a movie using bookmarklet without being logged in.
 
 2006-07-14
 - you can now edit and delete your movie ratings.
